@@ -19,6 +19,15 @@ java.util.Map and com.google.common.collect.Multimap. The map key type must
 be java.lang.String, while the value type can be any standard supported type
 or nested type (i.e. any type that is supported by Iterable).
 
+* Admin Http Server thread pool
+
+The thread pool for the admin http server (for jmx over http) listener has been
+separated from the main http thread pool to prevent DoS if all http threads in the main
+pool get stuck.
+
+The pool size can be controlled via the http-server.admin.threads.min and http-server.admin.threads.max
+configuration properties.
+
 * Configurable http client timeouts
 
 Connection and read timeouts for http client are now configurable. For Discovery client, use
